fix the margin problem on mobile size

--- a/src/styles/fullcredit.css
+++ b/src/styles/fullcredit.css
@@ -4,6 +4,7 @@ main
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 4rem;
 }
 
 .credit-content 
@@ -105,6 +106,11 @@ h3.made-by-hanif a
 
 @media screen and (min-width: 768px)
 {
+    main 
+    {
+        margin: 0;
+    }
+
     .credit-content h3 
     {
         font-size: 1.2em;
